--- a/Data_Visualization_Graphs_with_Phytonipynb.ipynb
+++ b/Data_Visualization_Graphs_with_Phytonipynb.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1YbC44rMCHJXi3VCb0uC6c73NX62aj2Zm",
-      "authorship_tag": "ABX9TyPzQZy9sjgKH42B3CLYiz7p",
+      "authorship_tag": "ABX9TyPJYTUG6yNfbfDar4sa97FP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7398,7 +7398,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#INTERATIVES GRAPHS WITH PLOTLY"
+        "#Interatives graphs with PLOTLY"
       ],
       "metadata": {
         "id": "Hm2SogvrIsrb"
@@ -7923,9 +7923,18 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "4OWU1Q8KXTzR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "#SAVING IN HTLM"
+        "#Saving in HTML"
       ],
       "metadata": {
         "id": "zME6HBzRPTna"
